--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@launchtrack/expo-starter",
   "main": "index.js",
   "version": "1.0.1",
+  "homepage": "https://github.com/launchtrack/expo-starter",
+  "repository": "git@github.com:launchtrack/expo-starter.git",
+  "license": "Apache-2.0",
   "scripts": {
     "dev": "expo start -c --ios",
     "dev:web": "expo start -c --web",
