--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "ios": "expo run:ios",
     "web": "expo start -c --web",
     "export": "expo export -p web",
-    "format": "biome check --no-errors-on-unmatched --apply ."
+    "format": "biome check --no-errors-on-unmatched --apply .",
+    "postinstall": "npx tailwindcss -i ./global.css -o ./node_modules/.cache/nativewind/global.css"
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.1",
