fix: github action

--- a/.github/workflows/pwa-build.yml
+++ b/.github/workflows/pwa-build.yml
@@ -3,6 +3,9 @@ name: Publish PWA to Github Pages
 on:
   workflow_dispatch:
 
+permissions:
+  contents: write
+  
 jobs:
   Build:
     name: Publish PWA to Github Pages
