--- a/package.json
+++ b/package.json
@@ -66,5 +66,6 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "typescript": "^5.1.3"
-  }
+  },
+  "trustedDependencies": ["tailwindcss"]
 }
