--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.6",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.6",
     "zustand": "^4.5.2"
