--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "web": "expo start -c --web",
     "export": "expo export -p web",
     "format": "biome check --no-errors-on-unmatched --apply .",
-    "postinstall": "bunx tailwindcss -i ./global.css -o ./node_modules/.cache/nativewind/global.css",
-    "db:generate": "bunx drizzle-kit generate"
+    "db:generate": "bunx drizzle-kit generate",
+    "db:studio": "bunx drizzle-kit studio"
   },
   "dependencies": {
     "@bacons/text-decoder": "^0.0.0",
@@ -63,6 +63,7 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.6",
+    "sql.js": "^1.10.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.6",
@@ -72,6 +73,8 @@
     "@babel/core": "^7.24.4",
     "@babel/runtime": "^7.24.4",
     "@types/react": "18.2.0",
+    "@types/sql.js": "^1.4.9",
+    "drizzle-kit": "^0.21.2",
     "tailwindcss": "3.4.1",
     "typescript": "^5.4.5"
   },
