--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "babel-plugin-inline-import": "^3.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "drizzle-orm": "^0.30.10",
+    "drizzle-orm": "0.31.2",
     "drizzle-zod": "^0.5.1",
     "expo": "^51.0.0",
     "expo-linking": "~6.3.1",
@@ -62,7 +62,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native-svg": "15.3.0",
     "react-native-web": "~0.19.6",
     "sql.js": "^1.10.3",
     "tailwind-merge": "^2.2.1",
