chore: update npm package info

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@launchtrack/expo-starter",
+  "name": "@expo-starter/template",
   "main": "index.ts",
   "version": "1.0.6",
-  "homepage": "https://launchtrack.dev",
-  "repository": "git@github.com:launchtrack/expo-starter.git",
+  "homepage": "https://expo-starter.com",
+  "repository": "git@github.com:expo-starter/template.git",
   "license": "Apache-2.0",
   "scripts": {
     "dev": "expo start --dev-client --clear",
