chore: fix dark mode and update layout on web

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "expo-system-ui": "~3.0.4",
     "lucide-react-native": "^0.314.0",
     "nativewind": "^4.0.36",
+    "next-themes": "^0.3.0",
     "phosphor-react-native": "^2.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
