add tabs screens and update screen settings

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "expo-sqlite": "~14.0.3",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
+    "expo-web-browser": "~13.0.3",
     "lucide-react-native": "^0.314.0",
     "nativewind": "^4.0.36",
     "next-themes": "^0.3.0",
