--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "web": "expo start -c --web",
     "export": "expo export -p web",
     "format": "biome check --no-errors-on-unmatched --apply .",
-    "db:generate": "bun drizzle-kit generate",
+    "migrate": "bun drizzle-kit generate",
     "db:studio": "bun drizzle-kit studio"
   },
   "dependencies": {
@@ -43,8 +43,10 @@
     "drizzle-orm": "0.31.2",
     "drizzle-zod": "^0.5.1",
     "expo": "^51.0.0",
+    "expo-intent-launcher": "~11.0.1",
     "expo-linking": "~6.3.1",
     "expo-navigation-bar": "~3.0.4",
+    "expo-notifications": "~0.28.9",
     "expo-router": "~3.5.14",
     "expo-splash-screen": "~0.27.4",
     "expo-sqlite": "~14.0.3",
@@ -77,7 +79,7 @@
     "@babel/runtime": "^7.24.4",
     "@types/react": "18.2.0",
     "@types/sql.js": "^1.4.9",
-    "drizzle-kit": "^0.21.2",
+    "drizzle-kit": "^0.22.8",
     "tailwindcss": "3.4.1",
     "typescript": "^5.4.5"
   },
