chore: add expo-dev-client

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev:android": "expo start -c --android",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start -c --web",
+    "web": "EXPO_USE_FAST_RESOLVER=1  expo start -c --web",
     "export": "expo export -p web",
     "format": "biome check --no-errors-on-unmatched --apply .",
     "db:generate": "bun drizzle-kit generate",
@@ -44,6 +44,7 @@
     "drizzle-orm": "0.31.2",
     "drizzle-zod": "^0.5.1",
     "expo": "^51.0.0",
+    "expo-dev-client": "~4.0.27",
     "expo-intent-launcher": "~11.0.1",
     "expo-linking": "~6.3.1",
     "expo-navigation-bar": "~3.0.4",
